--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1424,6 +1424,12 @@ h1 .copy-group-link {
 	width: 900px;
 }
 
+.code-review + .CodeMirror .cm-tab {
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADAAAAAMCAYAAAAkuj5RAAAAAXNSR0IArs4c6QAAAGFJREFUSMft1LsRQFAQheHPowAKoACx3IgEKtaEHujDjORSgWTH/ZOdnZOcM/sgk/kFFWY0qV8foQwS4MKBCS3qR6ixBJvElOobYAtivseIE120FaowJPN75GMu8j/LfMwNjh4HUpwg4LUAAAAASUVORK5CYII=);
+	background-position: right;
+	background-repeat: no-repeat;
+}
+
 .exercise__reviews {
 	float: right;
 	width: 250px;
@@ -1674,3 +1680,74 @@ h1 .copy-group-link {
 	color: #c33;
 }
 /* End of certificates */
+
+/* Course statistics */
+.course-statistics {}
+
+.course-statistics thead th {
+	font-weight: 100;
+	font-size: 12px;
+}
+
+.course-statistics .unit-title {
+	max-height: 18px;
+	line-height: 12px;
+	-moz-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+	font-weight: 700;
+	padding: 3px 2px;
+}
+
+.course-statistics .scoring-group-title,
+.course-statistics .scoring-group-max-score,
+.course-statistics .slide-title,
+.course-statistics .slide-max-score {
+	font-size: 10px;
+	padding: 3px 2px;
+	text-align: center;
+}
+
+.course-statistics .slide-title {
+	height: 60px;
+	min-height: 60px;
+}
+
+.course-statistics .slide-title__content {
+	text-align: left;
+	-webkit-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	transform: rotate(-90deg);
+	white-space: nowrap;
+	width: 20px;
+	position: relative;
+	top: 15px;
+}
+
+.course-statistics .slide-title,
+.course-statistics .slide-max-score,
+.course-statistics .slide-score {
+	display: none;
+}
+
+.course-statistics th,
+.course-statistics td {
+	border-right: 1px solid rgba(100, 100, 100, 0.2);
+	border-bottom: 1px solid rgba(100, 100, 100, 0.2);
+}
+
+.course-statistics th {
+	border-bottom: 1px solid rgba(100, 100, 100, 0.4);
+}
+
+.course-statistics tbody tr:nth-child(even) td {
+	background-color: #eee;
+}
+
+.course-statistics td.score {
+	text-align: center;
+}
+/* End of course statistics*/
