--- a/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
+++ b/src/uLearn.Web/Views/Admin/Diagnostics.cshtml
@@ -10,7 +10,7 @@
 <div class="container">
 	@if (Model.IsVersionPublished)
 	{
-		<h1>Курс обновлён, @Html.RouteLink("перейти к курсу →", "Course", new { courseId = Model.CourseId, action = "Slide" }, new {})</h1>
+		<h1>Курс обновлён, @Html.RouteLink("перейти к курсу →", "Course", new { courseId = Model.CourseId, action = "Slide" }, new { })</h1>
 
 		<div>
 			@Html.ActionLink("← Назад", "Packages", new { courseId = Model.CourseId }, new { @class = "btn btn-primary" })
@@ -69,28 +69,46 @@
 		</div>
 
 		if (Model.IsDiagnosticsForVersion)
-		 {
-			 if (Model.CourseDiff.IsEmptyChangeset)
-			 {
-				 <h3>Отличий от текущей версии нет</h3>
-			 }
-			 else
-			 {
-				 <h3>Отличия от текущей версии</h3>
-			 }
-			 if (Model.CourseDiff.SlideDiffs.Count > 0)
-			 {
-				 <h4>Изменятся слайды:</h4>
-				 foreach (var slideDiff in Model.CourseDiff.SlideDiffs)
-				 {
-					 <div>
-						 «@Html.RouteLink(slideDiff.OriginalSlide.Title, "Course.SlideById", new { Model.CourseId, slideId = slideDiff.OriginalSlide.Url }, new { target = "_blank", title = "Открыть текущую версию" })»
-						 @if (slideDiff.IsTitleChanged)
-						 {
-							 <span>→</span>
-							 <span>«@slideDiff.ChangedSlide.Title»</span>
-						 }
-					 </div>
+		{
+			if (Model.CourseDiff.IsEmptyChangeset)
+			{
+				<h3>Отличий от текущей версии нет</h3>
+			}
+			else
+			{
+				<h3>Отличия от текущей версии</h3>
+			}
+			if (Model.CourseDiff.SlideDiffs.Count > 0)
+			{
+				<h4>Изменятся слайды:</h4>
+				foreach (var slideDiff in Model.CourseDiff.SlideDiffs)
+				{
+					<div>
+						«@Html.RouteLink(slideDiff.OriginalSlide.Title, "Course.SlideById", new { Model.CourseId, slideId = slideDiff.OriginalSlide.Url }, new { target = "_blank", title = "Открыть текущую версию" })»
+						@if (slideDiff.IsTitleChanged)
+						{
+							<span>→</span>
+							<span>«@slideDiff.ChangedSlide.Title»</span>
+						}
+						@if (slideDiff.IsAtLeastOneBlockChanged)
+						{
+							<a href="#" class="expand-slide-diff-link internal-page-link" data-toggle="collapse" data-target=".slide-diff__@slideDiff.OriginalSlide.Id">показать отличия</a>
+						}
+					</div>
+					<div class="slide-diff__@slideDiff.OriginalSlide.Id collapse">
+						@foreach (var blockDiff in slideDiff.SlideBlockDiffs)
+						{
+							<div class="diff-table slide-diff-table" data-original="@(blockDiff.OriginalSlideBlock.XmlSerialize())" data-changed="@(blockDiff.ChangedSlideBlock.XmlSerialize())"></div>
+						}
+						@foreach (var block in slideDiff.InsertedBlocks)
+						{
+							<div class="diff-table slide-diff-table" data-original="" data-changed="@(block.XmlSerialize())"></div>
+						}
+						@foreach (var block in slideDiff.RemovedBlocks)
+						{
+							<div class="diff-table slide-diff-table" data-original="@(block.XmlSerialize())" data-changed=""></div>
+						}
+					</div>
 
 					@*if (slideDiff.SlideBlockDiffs.Count > 0)
 					{
@@ -122,32 +140,32 @@
 						}
 					}*@
 
-				 }
-			 }
-			 if (Model.CourseDiff.RemovedSlides.Count > 0)
-			 {
-				 <h4>Будут удалены слайды</h4>
-				 foreach (var slide in Model.CourseDiff.RemovedSlides)
-				 {
-					 <div>«@Html.RouteLink(slide.Title, "Course.SlideById", new { Model.CourseId, slideId = slide.Url }, new { target = "_blank", title = "Открыть текущую версию" })»</div>
-				 }
-			 }
-			 if (Model.CourseDiff.InsertedSlides.Count > 0)
-			 {
-				 <h4>Следующие слайды будут добавлены</h4>
-				 foreach (var slide in Model.CourseDiff.InsertedSlides)
-				 {
-					 <div>«@slide.Title»</div>
-				 }
-			 }
+				}
+			}
+			if (Model.CourseDiff.RemovedSlides.Count > 0)
+			{
+				<h4>Будут удалены слайды</h4>
+				foreach (var slide in Model.CourseDiff.RemovedSlides)
+				{
+					<div>«@Html.RouteLink(slide.Title, "Course.SlideById", new { Model.CourseId, slideId = slide.Url }, new { target = "_blank", title = "Открыть текущую версию" })»</div>
+				}
+			}
+			if (Model.CourseDiff.InsertedSlides.Count > 0)
+			{
+				<h4>Следующие слайды будут добавлены</h4>
+				foreach (var slide in Model.CourseDiff.InsertedSlides)
+				{
+					<div>«@slide.Title»</div>
+				}
+			}
 
-			 <p>
-				 @using (Html.BeginForm("PublishVersion", "Admin", new { Model.CourseId, Model.VersionId }, FormMethod.Post))
-				 {
-					 @Html.AntiForgeryToken()
-					 <button class="btn btn-success">Опубликовать →</button>
-				 }
-			 </p>
-		 }
+			<p>
+				@using (Html.BeginForm("PublishVersion", "Admin", new { Model.CourseId, Model.VersionId }, FormMethod.Post))
+				{
+					@Html.AntiForgeryToken()
+					<button class="btn btn-success">Опубликовать →</button>
+				}
+			</p>
+		}
 	}
 </div>
