Bootstrap-select for enhanced groups filter:   in unit/course statistics   in manual checking queue
Fix bug: in quiz with simple text queries don't set quiz status = Total
Fix bug: default dictionary with empty string values
Fix bug: indentation on xml serializing
Fix bug in HtmlExtensions.SelectListWithAttributes

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1714,6 +1714,10 @@ h1 .copy-group-link {
 	text-align: center;
 }
 
+.course-statistics .scoring-group-title {
+	height: 60px;
+}
+
 .course-statistics .scoring-group-max-score,
 .course-statistics .slide-max-score {
 	white-space: nowrap;
