--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -37,23 +37,12 @@
 			@Html.Hidden("courseId", Model.Course.Id)
 
 			<div id="filters" class="hidden-xs-inline">
-				<div class="form-group">
-					@{
-						var groupsListItems = new List<SelectListItem>
-						{
-							new SelectListItem { Text = "Все пользователи", Value = "all", Selected = Model.GroupId == "all" },
-							new SelectListItem { Text = "Мои группы", Value = "", Selected = string.IsNullOrEmpty(Model.GroupId) }
-						};
-						if (User.HasAccessFor(Model.Course.Id, CourseRole.CourseAdmin))
-						{
-							groupsListItems.Insert(1, new SelectListItem { Text = "Ни в одной группе", Value = "not-in-group", Selected = Model.GroupId == "not-in-group" });
-						}
-						groupsListItems.AddRange(
-							Model.Groups.Select(group => new SelectListItem { Text = group.Name, Value = group.Id.ToString(), Selected = group.Id.ToString() == Model.GroupId })
-							);
-					}
-					@Html.DropDownList("group", groupsListItems, new { @class = "form-control" })
-				</div>
+				@Html.Partial("~/Views/Shared/_GroupsFilter.cshtml", new GroupsFilterViewModel
+				   {
+					   CourseId = Model.Course.Id,
+					   SelectedGroupsIds = Model.SelectedGroupsIds,
+					   Groups = Model.Groups,
+				   })
 
 				<div class="form-group">
 					<button role="button" class="btn btn-primary">Отфильтровать</button>
@@ -74,19 +63,18 @@
 			}
 		</div>
 
-		<table class="course-statistics tablesorter" data-initial-order="desc">
+		<table class="course-statistics" data-initial-order="desc">
 			<thead>
 			<tr>
 				<th rowspan="2">Фамилия Имя</th>
-				<!-- <th class="student-group-title">Группа</th>-->
-				<th colspan="@Model.ScoringGroups.Count" data-sorter="false">
+				<th colspan="@Model.ScoringGroups.Count">
 					<div class="unit-title" data-unit-id="sum">Сумма</div>
 				</th>
 				@foreach (var unit in Model.Course.Units)
 				{
-					<th colspan="@unit.Scoring.Groups.Count" title="Посмотреть статистику по модулю «@unit.Title»" data-sorter="false">
+					<th colspan="@unit.Scoring.Groups.Count" title="Посмотреть статистику по модулю «@unit.Title»">
 						<div class="unit-title" data-unit-id="@unit.Id">
-							@Html.ActionLink(unit.Title, "UnitStatistics", "Analytics", new { courseId = Model.Course.Id, unitId = unit.Id }, new { })
+							@Html.ActionLink(unit.Title.TruncateWithEllipsis(20), "UnitStatistics", "Analytics", new { courseId = Model.Course.Id, unitId = unit.Id, group = Model.SelectedGroupsIdsJoined }, new { })
 						</div>
 					</th>
 				}
@@ -94,7 +82,7 @@
 			<tr>
 				@foreach (var scoringGroup in Model.ScoringGroups.Values)
 				{
-					<th class="scoring-group-title" title="@scoringGroup.Name" data-sorter="false"
+					<th class="scoring-group-title" title="@scoringGroup.Name"
 					    data-unit-id="sum" data-scoring-group="@scoringGroup.Id">@scoringGroup.Abbreviation</th>
 				}
 				@foreach (var unit in Model.Course.Units)
@@ -102,7 +90,7 @@
 					foreach (var scoringGroup in unit.Scoring.Groups.Values)
 					{
 						var shouldBeSolvedSlides = Model.ShouldBeSolvedSlidesByUnitScoringGroup[Tuple.Create(unit.Id, scoringGroup.Id)];
-						<th class="scoring-group-title" title="Развернуть @scoringGroup.Name" data-sorter="false"
+						<th class="scoring-group-title" title="Развернуть @scoringGroup.Name"
 						    data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id" data-expanded="false">
 							@if (shouldBeSolvedSlides.Count > 0)
 							{
@@ -115,14 +103,14 @@
 						</th>
 						foreach (var slide in shouldBeSolvedSlides)
 						{
-							<th class="slide-title" title="@slide.Title" data-sorter="false"
+							<th class="slide-title" title="@slide.Title"
 							    data-slide-id="@slide.Id" data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id">
 								<div class="slide-title__content">@slide.Title.TruncateWithEllipsis(8, "")</div>
 							</th>
 						}
 						if (shouldBeSolvedSlides.Count > 0 && scoringGroup.CanBeSetByInstructor)
 						{
-							<th class="slide-title" data-sorter="false"
+							<th class="slide-title"
 							    data-slide-id="additional" data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id">
 								<div class="slide-title__content">Доп</div>
 							</th>
@@ -131,32 +119,32 @@
 				}
 			</tr>
 			<tr>
-				<th class="scoring-group-max-score" style="text-align: right" data-sorter="false">Максимум:</th>
+				<th class="scoring-group-max-score" style="text-align: right">Максимум:</th>
 				@{
 					var orderingHint = "Нажмите для сортироки по этому полю. Нажмите с зажатым Shift, чтобы сортировать по нескольким столбцам";
 				}
 				@foreach (var scoringGroup in Model.ScoringGroups.Values)
 				{
-					<th class="scoring-group-max-score" title="@orderingHint"
-						data-scoring-group="@scoringGroup.Id">@Model.Course.Units.Sum(unit => GetMaxScoreForUnitByScoringGroup(unit, scoringGroup))</th>
+					<th class="scoring-group-max-score" title="@orderingHint" data-sorter="true"
+						 data-unit-id="sum" data-scoring-group="@scoringGroup.Id">@Model.Course.Units.Sum(unit => GetMaxScoreForUnitByScoringGroup(unit, scoringGroup))</th>
 				}
 				@foreach (var unit in Model.Course.Units)
 				{
 					foreach (var scoringGroup in unit.Scoring.Groups.Values)
 					{
-						<th class="scoring-group-max-score" title="@orderingHint"
+						<th class="scoring-group-max-score" title="@orderingHint" data-sorter="true"
 							data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id">@GetMaxScoreForUnitByScoringGroup(unit, scoringGroup)</th>
 						var shouldBeSolvedSlides = Model.ShouldBeSolvedSlidesByUnitScoringGroup[Tuple.Create(unit.Id, scoringGroup.Id)];
 						foreach (var slide in shouldBeSolvedSlides)
 						{
-							<th class="slide-max-score" title="@orderingHint"
+							<th class="slide-max-score" title="@orderingHint" data-sorter="true"
 								data-slide-id="@slide.Id" data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id">
 								@slide.MaxScore
 							</th>
 						}
 						if (shouldBeSolvedSlides.Count > 0 && scoringGroup.CanBeSetByInstructor)
 						{
-							<th class="slide-max-score" title="@orderingHint"
+							<th class="slide-max-score" title="@orderingHint" data-sorter="true"
 								data-slide-id="additional" data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id">
 								@scoringGroup.MaxAdditionalScore
 							</th>
@@ -168,14 +156,13 @@
 			<tbody>
 			@foreach (var user in Model.VisitedUsers)
 			{
-				<tr class="student" data-user-id="@user.UserId">
+				<tr class="student" data-user-id="@user.UserId" data-group-id="@Model.VisiterUsersGroups[user.UserId]">
 					<td title="@user.UserName @user.UserId">@user.UserVisibleName</td>
-					<!--<td class="student-group">@Model.VisiterUsersGroups[user.UserId]</td>-->
 
 					@foreach (var scoringGroup in Model.ScoringGroups.Values)
 					{
 						var scoringGroupScore = Model.Course.Units.Sum(unit => GetTotalScoreForUserInUnitByScoringGroup(user.UserId, unit, scoringGroup));
-						<td class="score scoring-group-score" data-scoring-group="@scoringGroup.Id">
+						<td class="score scoring-group-score" data-unit-id="sum" data-scoring-group="@scoringGroup.Id">
 							@scoringGroupScore
 						</td>
 					}
