--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -63,6 +63,9 @@
 			}
 		</div>
 
+		@{
+			var orderingHint = "Нажмите для сортироки по этому полю. Нажмите с зажатым Shift, чтобы сортировать по нескольким столбцам";
+		}
 		<table class="course-statistics" data-initial-order="desc">
 			<thead>
 			<tr>
@@ -72,7 +75,7 @@
 				</th>
 				@foreach (var unit in Model.Course.Units)
 				{
-					<th colspan="@unit.Scoring.Groups.Count" title="Посмотреть статистику по модулю «@unit.Title»">
+					<th colspan="@unit.Scoring.Groups.Count" title="Посмотреть статистику по модулю «@unit.Title»" data-unit-id="@unit.Id">
 						<div class="unit-title" data-unit-id="@unit.Id">
 							@Html.ActionLink(unit.Title.TruncateWithEllipsis(20), "UnitStatistics", "Analytics", new { courseId = Model.Course.Id, unitId = unit.Id, group = Model.SelectedGroupsIdsJoined }, new { })
 						</div>
@@ -90,11 +93,11 @@
 					foreach (var scoringGroup in unit.Scoring.Groups.Values)
 					{
 						var shouldBeSolvedSlides = Model.ShouldBeSolvedSlidesByUnitScoringGroup[Tuple.Create(unit.Id, scoringGroup.Id)];
-						<th class="scoring-group-title" title="Развернуть @scoringGroup.Name"
+						<th class="scoring-group-title"
 						    data-unit-id="@unit.Id" data-scoring-group="@scoringGroup.Id" data-expanded="false">
 							@if (shouldBeSolvedSlides.Count > 0)
 							{
-								<a href="#" class="expand-scoring-group__link  internal-page-link">@scoringGroup.Abbreviation&nbsp;<span class="expand-icon">&#9654;</span></a>
+								<a href="#" class="expand-scoring-group__link  internal-page-link" title="Развернуть @scoringGroup.Name">&nbsp;@scoringGroup.Abbreviation&nbsp;<span class="expand-icon">&#9654;</span></a>
 							}
 							else
 							{
@@ -120,9 +123,6 @@
 			</tr>
 			<tr>
 				<th class="scoring-group-max-score" style="text-align: right">Максимум:</th>
-				@{
-					var orderingHint = "Нажмите для сортироки по этому полю. Нажмите с зажатым Shift, чтобы сортировать по нескольким столбцам";
-				}
 				@foreach (var scoringGroup in Model.ScoringGroups.Values)
 				{
 					<th class="scoring-group-max-score" title="@orderingHint" data-sorter="true"
@@ -157,12 +157,12 @@
 			@foreach (var user in Model.VisitedUsers)
 			{
 				<tr class="student" data-user-id="@user.UserId" data-group-id="@Model.VisiterUsersGroups[user.UserId]">
-					<td title="@user.UserName @user.UserId">@user.UserVisibleName</td>
+					<td title="@user.UserName @user.UserId" class="student-name">@user.UserVisibleName</td>
 
 					@foreach (var scoringGroup in Model.ScoringGroups.Values)
 					{
 						var scoringGroupScore = Model.Course.Units.Sum(unit => GetTotalScoreForUserInUnitByScoringGroup(user.UserId, unit, scoringGroup));
-						<td class="score scoring-group-score" data-unit-id="sum" data-scoring-group="@scoringGroup.Id">
+						<td class="score scoring-group-score scoring-group-sum-score" data-unit-id="sum" data-scoring-group="@scoringGroup.Id">
 							@scoringGroupScore
 						</td>
 					}
